--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/terrarum/iomante#readme",
   "devDependencies": {
+    "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.7.2",
     "webpack": "^1.12.12"
+  },
+  "dependencies": {
+    "firebase": "^2.4.0",
+    "vue": "^1.0.15"
   }
 }
